// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReceiptLink /> renders successfully in existing transaction 1`] = `
Array [
  <span
    onClick={[Function]}
  >
    <a
      className="receipt-hash-link"
      href="/transactions/66WYKL9FcK1Av1WffDYwftm6t4iwUkJrnfZPjvZgsEB7#FNNA1kX7mBPZ5LD7t8RFAVNybvybVr8h5o3n5Xw86hUW"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      FNNA1kX...
    </a>
  </span>,
  <style
    global={true}
    jsx={true}
  >
    
        .receipt-hash-link.disabled {
          cursor: default;
          color: #24272a;
        }
      
  </style>,
]
`;

exports[`<ReceiptLink /> renders successfully in non existing transaction 1`] = `
Array [
  <span
    className="receipt-hash-link disabled"
    title="9zSjvFzm6BeNsco3fdNWqKNaYFkrj94AWWfGvgssQJuG"
  >
    9zSjvFz...
  </span>,
  <style
    global={true}
    jsx={true}
  >
    
        .receipt-hash-link.disabled {
          cursor: default;
          color: #24272a;
        }
      
  </style>,
]
`;
